feat(route): HomepageCtrl

--- a/app/index.html
+++ b/app/index.html
@@ -65,13 +65,15 @@
       </nav>
     </header>
 
-    <div class="container" ng-view=""></div>
+    <div ng-view=""></div>
+
     <hr>
+
     <footer class="footer container">
       <p class="text-center lead" dir="rtl">
         &copy; 2015 عبدالواحد الأنصاري
       </p>
-    </div>
+    </footer>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -105,6 +107,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/homepage.js"></script>
         <!-- endbuild -->
 
     <link href="https://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css">
