feat(route): add QuotesCtrl refactor(app.js): change `controllerAs` values

--- a/app/index.html
+++ b/app/index.html
@@ -107,6 +107,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/homepage.js"></script>
+        <script src="scripts/controllers/quotes.js"></script>
         <!-- endbuild -->
 
     <link href="https://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css">
