--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
               <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
             </a>
           </div>
-          <div class="collapse navbar-collapse" id="navbar">
+          <div class="collapse navbar-collapse" id="navbar" ng-controller="NavbarCtrl as vm">
             <ul class="nav navbar-nav navbar-right">
               <li class="dropdown">
                 <a href="#" target="_self" class="dropdown-toggle" data-toggle="dropdown" role="button"
@@ -45,20 +45,44 @@
                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                 </a>
                 <ul class="dropdown-menu">
-                  <li title="مقتطف"><a href="#/quotes/new" class="text-right">مقتطف</a></li>
-                  <li title="مرئيات و صوتيات"><a href="#/media/new" class="text-right">وسائط</a></li>
-                  <li title="فعالية أو مناسبة"><a href="#/activities/new" class="text-right">فعالية</a></li>
-                  <li title="مقال"><a href="#/articles/new" class="text-right">مقال</a></li>
-                  <li title="كتاب أو إصدار"><a href="#/books/new" class="text-right">كتب</a></li>
+                  <li title="مقتطف" ng-class="vm.getClass('/quotes/new')">
+                    <a href="#/quotes/new" class="text-right">مقتطف</a>
+                  </li>
+                  <li title="مرئيات و صوتيات" ng-class="vm.getClass('/media/new')">
+                    <a href="#/media/new" class="text-right">وسائط</a>
+                  </li>
+                  <li title="فعالية أو مناسبة" ng-class="vm.getClass('/activities/new')">
+                    <a href="#/activities/new" class="text-right">فعالية</a>
+                  </li>
+                  <li title="مقال" ng-class="vm.getClass('/articles/new')">
+                    <a href="#/articles/new" class="text-right">مقال</a>
+                  </li>
+                  <li title="كتاب أو إصدار" ng-class="vm.getClass('/books/new')">
+                    <a href="#/books/new" class="text-right">كتب</a>
+                  </li>
                 </ul>
               </li>
-              <li title="من أنا"><a href="#/about">من أنا</a></li>
-              <li title="راسلني"><a href="#/contact">راسلني</a></li>
-              <li title="مرئيات و صوتيات"><a href="#/media">وسائط</a></li>
-              <li title="مناسبات و فعاليات"><a href="#/activities">فعاليات</a></li>
-              <li title="كتب و إصدارات"><a href="#/books">كتب</a></li>
-              <li title="مقالات"><a href="#/articles">مقالات</a></li>
-              <li title="مقتطفات"><a href="#/quotes">مقتطفات</a></li>
+              <li title="من أنا" ng-class="vm.getClass('/about')">
+                <a href="#/about">من أنا</a>
+              </li>
+              <li title="راسلني" ng-class="vm.getClass('/contact')">
+                <a href="#/contact">راسلني</a>
+              </li>
+              <li title="مرئيات و صوتيات" ng-class="vm.getClass(['/media', '/media/new'])">
+                <a href="#/media">وسائط</a>
+              </li>
+              <li title="مناسبات و فعاليات" ng-class="vm.getClass(['/activities', '/activities/new'])">
+                <a href="#/activities">فعاليات</a>
+              </li>
+              <li title="كتب و إصدارات" ng-class="vm.getClass(['/books', '/books/new'])">
+                <a href="#/books">كتب</a>
+              </li>
+              <li title="مقالات" ng-class="vm.getClass(['/articles', '/articles/new'])">
+                <a href="#/articles">مقالات</a>
+              </li>
+              <li title="مقتطفات" ng-class="vm.getClass(['/quotes/new', '/quotes'])">
+                <a href="#/quotes">مقتطفات</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -110,6 +134,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/homepage.js"></script>
         <script src="scripts/controllers/quotes.js"></script>
+        <script src="scripts/controllers/navbar.js"></script>
         <!-- endbuild -->
 
     <link href="https://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css">
