--- a/app/index.html
+++ b/app/index.html
@@ -137,6 +137,7 @@
         <script src="scripts/controllers/homepage.js"></script>
         <script src="scripts/controllers/quotes.js"></script>
         <script src="scripts/controllers/navbar.js"></script>
+        <script src="scripts/controllers/articles.js"></script>
         <!-- endbuild -->
 
     <link href="https://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css">
