--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html>
+<html lang="ar">
   <head>
     <meta charset="utf-8">
-    <title>عبدالواحد الأنصاري - الصفحة الرئيسية</title>
+    <title>عبدالواحد الأنصاري</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
