--- a/app/index.html
+++ b/app/index.html
@@ -49,33 +49,33 @@
                   <li title="مقتطف" ng-class="vm.getClass('/quotes/new')">
                     <a href="#/quotes/new" class="text-right">مقتطف</a>
                   </li>
-                  <li title="مرئيات و صوتيات" ng-class="vm.getClass('/media/new')">
+                  <li class="disabled" title="مرئيات و صوتيات" ng-class="vm.getClass('/media/new')">
                     <a href="#/media/new" class="text-right">وسائط</a>
                   </li>
-                  <li title="فعالية أو مناسبة" ng-class="vm.getClass('/activities/new')">
+                  <li class="disabled" title="فعالية أو مناسبة" ng-class="vm.getClass('/activities/new')">
                     <a href="#/activities/new" class="text-right">فعالية</a>
                   </li>
                   <li title="مقال" ng-class="vm.getClass('/articles/new')">
                     <a href="#/articles/new" class="text-right">مقال</a>
                   </li>
-                  <li title="كتاب أو إصدار" ng-class="vm.getClass('/books/new')">
+                  <li class="disabled" title="كتاب أو إصدار" ng-class="vm.getClass('/books/new')">
                     <a href="#/books/new" class="text-right">كتب</a>
                   </li>
                 </ul>
               </li>
-              <li title="من أنا" ng-class="vm.getClass('/about')">
+              <li class="disabled" title="من أنا" ng-class="vm.getClass('/about')">
                 <a href="#/about">من أنا</a>
               </li>
-              <li title="راسلني" ng-class="vm.getClass('/contact')">
+              <li class="disabled" title="راسلني" ng-class="vm.getClass('/contact')">
                 <a href="#/contact">راسلني</a>
               </li>
-              <li title="مرئيات و صوتيات" ng-class="vm.getClass(['/media', '/media/new'])">
+              <li class="disabled" title="مرئيات و صوتيات" ng-class="vm.getClass(['/media', '/media/new'])">
                 <a href="#/media">وسائط</a>
               </li>
-              <li title="مناسبات و فعاليات" ng-class="vm.getClass(['/activities', '/activities/new'])">
+              <li class="disabled" title="مناسبات و فعاليات" ng-class="vm.getClass(['/activities', '/activities/new'])">
                 <a href="#/activities">فعاليات</a>
               </li>
-              <li title="كتب و إصدارات" ng-class="vm.getClass(['/books', '/books/new'])">
+              <li class="disabled" title="كتب و إصدارات" ng-class="vm.getClass(['/books', '/books/new'])">
                 <a href="#/books">كتب</a>
               </li>
               <li title="مقالات" ng-class="vm.getClass(['/articles', '/articles/new'])">
@@ -138,6 +138,7 @@
         <script src="scripts/controllers/quotes.js"></script>
         <script src="scripts/controllers/navbar.js"></script>
         <script src="scripts/controllers/articles.js"></script>
+        <script src="scripts/controllers/article.js"></script>
         <!-- endbuild -->
 
     <link href="https://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css">
