feat(routes): add books

--- a/app/index.html
+++ b/app/index.html
@@ -139,6 +139,7 @@
         <script src="scripts/controllers/navbar.js"></script>
         <script src="scripts/controllers/articles.js"></script>
         <script src="scripts/controllers/article.js"></script>
+        <script src="scripts/controllers/books.js"></script>
         <!-- endbuild -->
 
     <link href="https://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css">
