fix(views): typo in index.html

--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,7 @@
                     <a href="#/articles/new" class="text-right">مقال</a>
                   </li>
                   <li class="disabled" title="كتاب أو إصدار" ng-class="vm.getClass('/books/new')">
-                    <a href="#/books/new" class="text-right">كتب</a>
+                    <a href="#/books/new" class="text-right">كتاب</a>
                   </li>
                 </ul>
               </li>
