--- a/app/index.html
+++ b/app/index.html
@@ -142,6 +142,7 @@
         <script src="scripts/controllers/articles.js"></script>
         <script src="scripts/controllers/article.js"></script>
         <script src="scripts/controllers/books.js"></script>
+        <script src="scripts/services/ckeditor_options.js"></script>
         <!-- endbuild -->
 
     <link href="https://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css">
