--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,8 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/ckeditor/skins/moono/editor.css" />
+    <link rel="stylesheet" href="bower_components/ckeditor/contents.css" />
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
     <!-- endbower -->
     <!-- endbuild -->
@@ -117,6 +119,9 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
     <script src="bower_components/ckeditor/ckeditor.js"></script>
+    <script src="bower_components/ckeditor/config.js"></script>
+    <script src="bower_components/ckeditor/lang/ar.js"></script>
+    <script src="bower_components/ckeditor/lang/en.js"></script>
     <script src="bower_components/firebase/firebase.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
@@ -143,6 +148,7 @@
         <script src="scripts/controllers/article.js"></script>
         <script src="scripts/controllers/books.js"></script>
         <script src="scripts/services/ckeditor_options.js"></script>
+        <script src="scripts/controllers/articles_new.js"></script>
         <!-- endbuild -->
 
     <link href="https://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css">
