--- a/app/index.html
+++ b/app/index.html
@@ -128,6 +128,7 @@
     <script src="bower_components/firebase/firebase.js"></script>
     <script src="bower_components/angularfire/dist/angularfire.js"></script>
     <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
+    <script src="bower_components/angular-elastic/elastic.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
