refactor(Firebase): Extract Firbase ref into a constant

--- a/app/index.html
+++ b/app/index.html
@@ -142,6 +142,7 @@
         <script src="scripts/controllers/article.js"></script>
         <script src="scripts/controllers/books.js"></script>
         <script src="scripts/controllers/books_new.js"></script>
+        <script src="scripts/services/firebase_ref.js"></script>
         <!-- endbuild -->
 
     <link href="https://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css">
