--- a/app/index.html
+++ b/app/index.html
@@ -75,10 +75,10 @@
               <li class="disabled" title="مناسبات و فعاليات" ng-class="vm.getClass(['/activities', '/activities/new'])">
                 <a href="#/activities">فعاليات</a>
               </li>
-              <li title="كتب و إصدارات" ng-class="vm.getClass(['/books', '/books/new'])">
+              <li title="كتب و إصدارات" ng-class="vm.getClass('/books')">
                 <a href="#/books">كتب</a>
               </li>
-              <li title="مقالات" ng-class="vm.getClass(['/articles', '/articles/new'])">
+              <li title="مقالات" ng-class="vm.getClass('/articles')">
                 <a href="#/articles">مقالات</a>
               </li>
               <li title="مقتطفات" ng-class="vm.getClass(['/quotes/new', '/quotes'])">
@@ -143,6 +143,7 @@
         <script src="scripts/controllers/books.js"></script>
         <script src="scripts/controllers/books_new.js"></script>
         <script src="scripts/services/firebase_ref.js"></script>
+        <script src="scripts/controllers/articles_new.js"></script>
         <!-- endbuild -->
 
     <link href="https://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css">
