feat(views): move creating a quote to its own page

--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,7 @@
               <li title="مقالات" ng-class="vm.getClass('/articles')">
                 <a href="#/articles">مقالات</a>
               </li>
-              <li title="مقتطفات" ng-class="vm.getClass(['/quotes/new', '/quotes'])">
+              <li title="مقتطفات" ng-class="vm.getClass('/quotes')">
                 <a href="#/quotes">مقتطفات</a>
               </li>
             </ul>
@@ -144,6 +144,7 @@
         <script src="scripts/controllers/books_new.js"></script>
         <script src="scripts/services/firebase_ref.js"></script>
         <script src="scripts/controllers/articles_new.js"></script>
+        <script src="scripts/controllers/quotes_new.js"></script>
         <!-- endbuild -->
 
     <link href="https://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css">
