--- a/app/index.html
+++ b/app/index.html
@@ -147,6 +147,12 @@
         <script src="scripts/services/user_service.js"></script>
         <!-- endbuild -->
 
+    <script>
+      $(".navbar-collapse a:not(.dropdown-toggle), .navbar-brand").click(function () {
+        $(".navbar-collapse").collapse("hide");
+      });
+    </script>
+
     <link href="https://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css">
 </body>
 </html>
