feat(route): add about page

--- a/app/index.html
+++ b/app/index.html
@@ -76,7 +76,7 @@
                   </li>
                 </ul>
               </li>
-              <li class="disabled" title="من أنا" ng-class="vm.getClass('/about')"><a href="#/about">من أنا</a></li>
+              <li title="من أنا" ng-class="vm.getClass('/about')"><a href="#/about">من أنا</a></li>
               <li title="راسلني" ng-class="vm.getClass('/contact')"><a href="#/contact">راسلني</a></li>
               <li class="disabled" title="مرئيات و صوتيات" ng-class="vm.getClass('/media')">
                 <a href="#/media">وسائط</a>
