feat(views): admin can now add pictures for an article

--- a/app/index.html
+++ b/app/index.html
@@ -131,6 +131,7 @@
     <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
     <script src="bower_components/angular-elastic/elastic.js"></script>
     <script src="bower_components/angular-ckeditor/angular-ckeditor.js"></script>
+    <script src="bower_components/angular-imgur-upload/dist/angular-imgur-upload.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
