fix(imgur): Fix mixed content from Imgur

--- a/app/index.html
+++ b/app/index.html
@@ -150,6 +150,7 @@
         <script src="scripts/controllers/quotes_new.js"></script>
         <script src="scripts/controllers/contact.js"></script>
         <script src="scripts/services/user_service.js"></script>
+        <script src="scripts/services/image_service.js"></script>
         <!-- endbuild -->
 
     <script src="//cdn.ckeditor.com/4.4.5.1/full-all/ckeditor.js"></script>
