--- a/app/index.html
+++ b/app/index.html
@@ -132,6 +132,7 @@
     <script src="bower_components/angular-elastic/elastic.js"></script>
     <script src="bower_components/angular-ckeditor/angular-ckeditor.js"></script>
     <script src="bower_components/angular-imgur-upload/dist/angular-imgur-upload.min.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
