--- a/app/index.html
+++ b/app/index.html
@@ -152,6 +152,7 @@
         <script src="scripts/controllers/contact.js"></script>
         <script src="scripts/services/user_service.js"></script>
         <script src="scripts/services/image_service.js"></script>
+        <script src="scripts/filters/truncate.js"></script>
         <!-- endbuild -->
 
     <script src="//cdn.ckeditor.com/4.4.5.1/full-all/ckeditor.js"></script>
