fix(views): use same protocol (e.g: '//' instead of 'http://')

--- a/app/index.html
+++ b/app/index.html
@@ -167,6 +167,6 @@
       });
     </script>
 
-    <link href="https://fonts.googleapis.com/earlyaccess/droidarabicnaskh.css">
+    <link href="//fonts.googleapis.com/earlyaccess/droidarabicnaskh.css">
 </body>
 </html>
