--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
       ;NREUM.info={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",licenseKey:"0828e2fd0c",applicationID:"10690427",sa:1,agent:"js-agent.newrelic.com/nr-686.min.js"}
     </script>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
