fix(views): CKEditor script must be on index.html; for simplicity

--- a/app/index.html
+++ b/app/index.html
@@ -114,6 +114,12 @@
       ga('send', 'pageview');
     </script>
 
+    <script src="//cdn.ckeditor.com/4.4.5.1/full-all/ckeditor.js"></script>
+    <script>
+      CKEDITOR.config.defaultLanguage = 'ar';
+      CKEDITOR.config.language = 'ar';
+    </script>
+
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
