chore(views): use a different word for 'book'

--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
                     <a href="#/activities/new" class="text-right">فعالية</a>
                   </li>
                   <li title="كتاب أو إصدار" ng-class="vm.getClass('/books/new')">
-                    <a href="#/books/new" class="text-right">كتاب</a>
+                    <a href="#/books/new" class="text-right">إصدار</a>
                   </li>
                   <li title="مقال" ng-class="vm.getClass('/articles/new')">
                     <a href="#/articles/new" class="text-right">مقال</a>
@@ -85,7 +85,7 @@
               <li class="disabled" title="مناسبات و فعاليات" ng-class="vm.getClass('/activities')">
                 <a href="#/activities">فعاليات</a>
               </li>
-              <li title="كتب و إصدارات" ng-class="vm.getClass('/books')"><a href="#/books">كتب</a></li>
+              <li title="كتب و إصدارات" ng-class="vm.getClass('/books')"><a href="#/books">إصدارات</a></li>
               <li title="مقالات" ng-class="vm.getClass('/articles')"><a href="#/articles">مقالات</a></li>
               <li title="مقتطفات" ng-class="vm.getClass('/quotes')"><a href="#/quotes">مقتطفات</a></li>
             </ul>
