--- a/app/index.html
+++ b/app/index.html
@@ -154,6 +154,7 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/poems_new.js"></script>
     <script src="scripts/controllers/poems.js"></script>
+    <script src="scripts/controllers/poem.js"></script>
     <!-- endbuild -->
 
     <script>
