feat(route): add selections/new

--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
                      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                   </a>
                   <ul class="dropdown-menu">
-                    <li class="disabled" ng-class="vm.getClass('/selections/new')">
+                    <li ng-class="vm.getClass('/selections/new')">
                       <a href="#/selections/new" class="text-right">مختارة</a>
                     </li>
                     <li ng-class="vm.getClass('/poems/new')"><a href="#/poems/new" class="text-right">قصيدة</a></li>
@@ -155,6 +155,7 @@
     <script src="scripts/controllers/poems_new.js"></script>
     <script src="scripts/controllers/poems.js"></script>
     <script src="scripts/controllers/poem.js"></script>
+    <script src="scripts/controllers/selections_new.js"></script>
     <!-- endbuild -->
 
     <script>
