feat(route): add selections/

--- a/app/index.html
+++ b/app/index.html
@@ -82,7 +82,7 @@
                   <a href="#/media">وسائط</a>
                 </li>
                 <li title="كتب و إصدارات" ng-class="vm.getClass('/books')"><a href="#/books">إصدارات</a></li>
-                <li title="مختارات" class="disabled" ng-class="vm.getClass('/selections')"><a href="#/articles">مختارات</a></li>
+                <li title="مختارات" ng-class="vm.getClass('/selections')"><a href="#/selections">مختارات</a></li>
                 <li title="شعر" ng-class="vm.getClass('/poems')"><a href="#/poems">شعر</a></li>
                 <li title="مقالات" ng-class="vm.getClass('/articles')"><a href="#/articles">مقالات</a></li>
               </ul>
@@ -156,6 +156,7 @@
     <script src="scripts/controllers/poems.js"></script>
     <script src="scripts/controllers/poem.js"></script>
     <script src="scripts/controllers/selections_new.js"></script>
+    <script src="scripts/controllers/selections.js"></script>
     <!-- endbuild -->
 
     <script>
